Fix profile and reset password bugs.